--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/media/victor/Escuela/Sexto_Semestre/Redes2/Programas/Forum/mysql-connector-java-5.1.42-bin.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/julio/OneDrive/Escritorio/Forum/mysql-connector-java-5.1.44.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
